# 3D_Renderer_V2

./: .gitignore  CMakeLists.txt  README.md
Assets/: Arch.h2b  Arch_bars.h2b  Bag_Coins.h2b  Bag_Standing.h2b  Banner.h2b  Banner_wall.h2b  Barrel.h2b  Barrel2.h2b  Bucket.h2b  Chest.h2b  Chest_Gold.h2b  Cobweb.h2b  Coin_Pile.h2b  Crate.h2b  Floor_Modular.h2b  Glass_Bottle_OBJ.h2b  Pedestal2.h2b  Skull.h2b  Sword_WallMount.h2b  Torch.h2b  Trapdoor.h2b  Vase.h2b  Wall_Modular.h2b  mortar and pestle.h2b
Levels/: GameLevel.txt  GameLevelTest.txt  GameLevel_02.txt
Shaders/: PixelShader.hlsl  PixelShader_2D.hlsl  VertexShader.hlsl  VertexShader_2D.hlsl
Source/: Main.cpp
Source/Systems/: renderer.cpp  renderer.h
Source/Utils/: FileIntoString.h  Font.h  load_data_oriented.h
Textures/: 100.dds  200.dds  300.dds  400.dds  Health_left.dds  Health_right.dds  Mana_left.dds  Mana_right.dds  arrowLeft.dds  arrowRight.dds  blueButton.dds  bomb.dds  continue.dds  jellyfish.dds  lives.dds  menuBackground.dds  minimapBackground.dds  minimap_jellyfish.dds  minimap_player.dds  minimap_pufferfish.dds  minimap_shark.dds  minimap_tuna.dds  play.dds  pufferfish.dds  quit.dds  shark.dds  submarine.dds  tuna.dds
XML/: hud.xml
gateware-main/: Gateware.h
